--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -34,7 +34,8 @@ Once deployed via the Helium Wallet and fully synced, there are five ways your H
  
   
 ### How much Helium can I earn?
-It's hard to say since there are so many variables that go into it, i.e. the total number of active hotspots, how many hotspots are within range of yours, how many devices use your hotspot, etc.  That said, the sooner you join, the sooner you start mining Helium tokens!  Note that we are only able to talk about potential earnings in regards to Helium tokens and the network.
+Hotspot earnings are imprecise and hard to predict for many reasons. Primarily this is due to the number of variables that account for HNT earnings at any given time. Do your own research and work hard to optimize your deployments. Better coverage yields more HNT.
+
  
 ### Is there a limit to the number of hotspots per city?
 At this time there is no hard cap on the number of Hotspots per city. In fact, we believe more coverage per city will encourage more usage.  
