--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -38,5 +38,5 @@ Hotspot earnings are imprecise and hard to predict for many reasons. Primarily t
 
  
 ### Is there a limit to the number of hotspots per city?
-At this time there is no hard cap on the number of Hotspots per city. In fact, we believe more coverage per city will encourage more usage.  
+There is no hard cap on the number of Hotspots per city. In fact, we believe more coverage per city will encourage more usage.  You can see a full city leaderboard [on the Helium Explorer](https://explorer.helium.com/hotspots).
  
