--- a/docs/faq/hotspot-resellers.mdx
+++ b/docs/faq/hotspot-resellers.mdx
@@ -6,7 +6,7 @@ sidebar_label: Hotspot Resellers
 slug: /faq/hotspot-resellers
 ---
 
-# FAQ - Hotspot Resellers
+# FAQ - Approved Hotspot Manufacturers
 
 Authorized Resellers (“Makers”)
 There's no harm in shopping around before making a purchase.  That said, it is important to know what risks may be involved when buying something from a 3rd-party.
@@ -24,5 +24,4 @@ websites or their channel in our community Discord chat:
 - Easylinkin or in the #bobcat channel  
 - Parley Labs or in the #parely-labs channel  
 - Kerlink or in the #kerlink channel  
-
 
