rename hotspot resellers faq doc to mfgs

--- a/docs/faq/hotspot-manufacturers.mdx
+++ b/docs/faq/hotspot-manufacturers.mdx
@@ -1,9 +1,9 @@
 ---
-id: hotspot-resellers
+id: hotspot-manufacturers
 hide_title: true
-title: Hotspot Resellers FAQ
-sidebar_label: Hotspot Resellers
-slug: /faq/hotspot-resellers
+title: Approved Hotspot Manufacturers FAQ
+sidebar_label: Approved Hotspot Manufacturers
+slug: /faq/hotspot-manufacturers
 ---
 
 # FAQ - Approved Hotspot Manufacturers
