Add doc for google sheets integration

--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -49,3 +49,5 @@ attaching them to devices and integrations. \(See more instructions here.\)
 [Ubidots](/use-the-network/console/integrations/ubidots)
 
 [Tago.IO](/use-the-network/console/integrations/tago)
+
+[Google Sheets](/use-the-network/console/integrations/google-sheets)
