Apply suggestions from code review
Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

--- a/docs/use-the-network/console/integrations/google-sheets.mdx
+++ b/docs/use-the-network/console/integrations/google-sheets.mdx
@@ -24,7 +24,7 @@ We recommend setting questions to "Short Answer".
 />
 
 
-## Make sure public
+## Make Form Public
 
 In the top right, click the settings cog next to the send button.
 
@@ -111,4 +111,4 @@ With that done, we can click **Add Integration**.
 
 ## Attach to Device
 
-Going to **Devices** on the left-hand menu, we can now [add our label](../labels)
+Going to **Devices** on the left-hand menu, we can now [add our label](../labels).
