Update some sentences for readability

--- a/docs/use-the-network/console/integrations/google-sheets.mdx
+++ b/docs/use-the-network/console/integrations/google-sheets.mdx
@@ -14,7 +14,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 [Google Forms](https://forms.google.com)
 
 Create a form.
-Put in your fields, we're going to an environment sensor as an example.
+
+Make a question for each field you want to capture from your device.
+We're going to use an environment sensor for this example.
+
 We recommend setting questions to "Short Answer".
 
 <img
@@ -98,7 +101,7 @@ Take this time to name your integration.
 We can fill out the Function Body now, or save the integration and edit it later under **Functions**.
 We're going to fill it out now.
 
-For this example, our device is a [Wisblock](https://docs.helium.com/use-the-network/devices/development/rakwireless/wisblock-4631/) with an environment sensor included in the [RAK Helium Devkit](https://store.rakwireless.com/collections/helium/products/helium-developer-kit).
+The data in this example is coming from a [Wisblock](https://docs.helium.com/use-the-network/devices/development/rakwireless/wisblock-4631/) with an environment sensor that's included in the [RAK Helium Devkit](https://store.rakwireless.com/collections/helium/products/helium-developer-kit).
 The Decoder function for this environment sensor is pasted into the **Function Body** section and passed the data from the device so it can get us the fields we need. We then map those to the google forms fields.
 
 <img
