small wording change

--- a/docs/use-the-network/devices/development/quickstart-guides.mdx
+++ b/docs/use-the-network/devices/development/quickstart-guides.mdx
@@ -9,7 +9,7 @@ slug: /use-the-network/devices/development/quickstart-guides
 ## Development Device Quickstart Guides
 
 Quickstart guides are provided for some of the most popular development boards.  
-The guides will cover every step needed to program and send packets on the network.
+The guides cover every step needed to program and send packets on the network.
 
 #### [ST B-L072Z-LRWAN1](/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1)
 - [Arduino](/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1/arduino)
