--- a/docs/mine-hnt/hotspot-makers/docker-integration/docker-integration.mdx
+++ b/docs/mine-hnt/hotspot-makers/docker-integration/docker-integration.mdx
@@ -25,14 +25,16 @@ Before we get into the details, it's useful to understand how the Quay releases
 integrate with the Miner release flow.
 
 Helium maintains the [Miner repository](https://github.com/helium/miner) and
-maintains firmware images for the original Helium hotspots (Raspberry Pi 3B+ and
-4 based). When we have a release candidate, you will see a tag with the date of
-the release candidate. This usually means that we are testing a release
-candidate. This testing process has many stages, but if and when a release
-passes, it will graduate to "General Availability" and be re-tagged with the
-`_GA` suffix. This triggers an automatic build of the Docker images which get
-pushed to Quay when complete. In addition, a "Blockchain Release" will be posted
-on [engineering.helium.com](https://engineering.helium.com/).
+maintains proprietary firmware images for the original Helium hotspots
+(Raspberry Pi 3B+ and 4 based). When we have a release candidate, you will see a
+tag with the date of the release candidate. This usually means that we are
+testing a release candidate. This testing process has many stages, but if and
+when a release passes, it will graduate to "General Availability" and be
+re-tagged with the `_GA` suffix. This triggers an automatic build of the Docker
+images which get pushed to Quay when complete.
+
+In addition, a "Blockchain Release" will typically be posted on
+[engineering.helium.com](https://engineering.helium.com/).
 
 As a blockchain is decentralized in its nature, we are careful not to do
 breaking changes that require immediate and synchronized updates of the Miner.
@@ -135,3 +137,9 @@ Docker container, and connect D-bus to the Docker container:
  -v /var/run/dbus:/var/run/dbus
  --mount type=bind,source=/home/ubuntu/miner_data,target=/var/data \
 ```
+
+## Define the DBus Config
+
+You'll want to install
+[the Miner's DBus config](https://github.com/helium/miner/blob/master/config/com.helium.Miner.conf),
+typically at: /etc/dbus-1/system.d/com.helium.Miner.conf`
