--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -11,8 +11,9 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 # Configure a Wallet
 
 You’ll need an owner wallet to:
-* Stake your Testnet Network Tokens (TNT)
-* Receive validator node consensus group rewards
+
+- Stake your Testnet Network Tokens (TNT)
+- Receive validator node consensus group rewards
 
 :::note
 
@@ -24,67 +25,96 @@ To download the wallet go [here](https://github.com/helium/helium-wallet-rs).
 
 ## Wallet Commands
 
-At any time use ```-h``` or ```--help``` to get more help for a command.
+At any time use `-h` or `--help` to get more help for a command.
 
 ### Create a Wallet
 
-```./helium-wallet create basic --network testnet``` 
+`./helium-wallet create basic --network testnet`
 
 #### Create or Use Wallet without Password Input
+
 For security reasons, it is generally recommended that you type in your password every time. Storing the password in an environmental variable makes it very easy for the password to get compromised. Sometimes though, despite the security risks, you may want to interact with the CLI without inputting the password. In this case, using the environmental variable `HELIUM_WALLET_PASSWORD` enables this.
+
 ```
 HELIUM_WALLET_PASSWORD=p4ssw0rd ./helium-wallet create basic --network testnet
-``` 
-
+```
 
 ### View wallet balance and public key
-```./helium-wallet info``` view public key and TNT balance. You’ll need this public key address to obtain TNT needed for staking. 
+
+`./helium-wallet info` view public key and TNT balance. You’ll need this public key address to obtain TNT needed for staking.
 
 To obtain TNT tokens visit [Obtain Testnet Network Tokens (TNT)](/mine-hnt/validators/validator-tnt).
 
 :::warning
 
- Always make sure to inspect the transaction _before_ adding the **--commit**  option to sign and submit it to the api. There is no undo.
+Always make sure to inspect the transaction _before_ adding the **--commit** option to sign and submit it to the api. There is no undo.
 
 :::
 
 ### Stake Tokens
-After you have received your TNT you need to stake these tokens. 
+
+After you have received your TNT you need to stake these tokens.
 
 As part of the staking process the validator node address needs to be in the staking transaction and also needs to sign the transaction. After a wallet stakes a validator node, the wallet becomes that node’s owner, has control over that validator node, and receives rewards.
 
 #### To stake tokens perform the following:
 
-* Obtain the validator node address:
-    * On the validator, run ```miner peer addr```.  This will produce something like: ```/p2p/112sSfUCQrVNAfFKVZWUSCeLs67wH8o1xz4yj4nKSPJKBT8bUkXi```
+- Obtain the validator node address:
 
-    In this example the part following the final slash is the validator node's public address: ```112sSfUCQrVNAfFKVZWUSCeLs67wH8o1xz4yj4nKSPJKBT8bUkXi```.
+  - On the validator, run `miner peer addr`. This will produce something like: `/p2p/112sSfUCQrVNAfFKVZWUSCeLs67wH8o1xz4yj4nKSPJKBT8bUkXi`
 
-* Stake the TNT:
-    * ```./helium-wallet validators stake <public-address> 10000```
+  In this example the part following the final slash is the validator node's public address: `112sSfUCQrVNAfFKVZWUSCeLs67wH8o1xz4yj4nKSPJKBT8bUkXi`.
 
-Use `--commit` after preview to submit the transaction to network. 
+- Stake the TNT:
+  - `./helium-wallet validators stake <public-address> 10000`
+
+Use `--commit` after preview to submit the transaction to network.
 
 ### Unstake Tokens
-If you unstake tokens the validator node enters a cooldown period. During this cooldown period the validator node will not earn rewards and at the end of the cooldown period (currently 250,000 blocks or approximately 5 months) your initial staking amount will be returned to the wallet. The cooldown period will be shortened for the testnet to 360 blocks (approx. an hour).
-You need to include the stake release block height which should be at least the current block height plus the cooldown period, and 5-10 blocks to allow for chain processing delays. For example, if the current block height was 5000, you'd add 260,000 (250,000 plus 10 for delays) for a stake release height value of 265,000.  
 
+If you unstake tokens the validator node enters a cooldown period. During this cooldown period the validator node will not earn rewards and at the end of the cooldown period (currently 250,000 blocks or approximately 5 months in mainnet) your initial staking amount will be returned to the wallet.
+
+You need to include the stake release block height which should be at least the current block height plus the cooldown period, and 5-10 blocks to allow for chain processing delays.
+
+For example, if the current block height was 5000, you'd add 250,000 for a stake release height plus an additional 10 to allow for chain processing delays. Therefore the `stake-release-height` is `5000 + 250000 + 10` or `255010`.
+
+:::info
+
+For testnet, the cooldown period is shortened to 360 blocks (approx. an hour). In the above calculation, replace `250000` with `360`.
+
+:::
 
 #### To unstake tokens from a validator node perform the following:
-```./helium-wallet validators unstake <public-address> --stake-release-height <stake release height>```
 
-Use `--commit` after previewing to submit the transaction to network. 
+Obtain the validator node public address as described in [the stake command](#stake-tokens) and calculate the `stake-release-height` as defined above.
 
-### Transfer stake 
-A validator node's stake can be transferred to other validator nodes in the same wallet or a different one. 
+`./helium-wallet validators unstake <public-address> --stake-release-height <stake release height>`
+
+Use `--commit` after previewing to submit the transaction to network. If you wait too long to commit, you may need to recalculate the `stake-release-height` value.
+
+:::warning
+
+Once the unstake command is committed, this cannot be reversed. The validator will cease earning rewards and the stake amount will not be returned to the staking wallet until the 250,000 block cooldown period has completed.
+
+:::
+
+:::info
+
+Once a validator has been unstaked, it cannot be staked again. The validator may be deleted, including the `swarm_key`. Wallet commands to stake this validator's public address again will fail.
+
+:::
+
+### Transfer stake
+
+A validator node's stake can be transferred to other validator nodes in the same wallet or a different one.
 
 If the stake is transferred to a validator node in a different wallet, the owner of the other wallet must accept the transfer to complete the transaction.
 
-
 #### To transfer stake to a new validator node in the same wallet:
-```./helium-wallet validators transfer create --new-address <new-public-address> --old-address <old-public-address>```
 
-Use `--commit` after previewing to submit the transaction to network. 
+`./helium-wallet validators transfer create --new-address <new-public-address> --old-address <old-public-address>`
+
+Use `--commit` after previewing to submit the transaction to network.
 
 This will produce an output similar to the following:
 
@@ -105,7 +135,7 @@ This will produce an output similar to the following:
 
 #### To transfer stake to a new validator node in a different wallet:
 
-```./helium-wallet --format json validators transfer create --new-address <new-public-address> --old-address <old-public-address> --new-owner <new-owner-wallet-public-address>```
+`./helium-wallet --format json validators transfer create --new-address <new-public-address> --old-address <old-public-address> --new-owner <new-owner-wallet-public-address>`
 
 **Note: you must transfer the stake to a new validator node. **
 
@@ -124,11 +154,16 @@ This will produce an output similar to the following:
 }
 ```
 
-You'll then need to send the txn value (a base64 string) to the new owner to be accepted. 
+You'll then need to send the txn value (a base64 string) to the new owner to be accepted.
 
 #### To accept the transfer the new owner performs the following:
 
-```./helium-wallet validators transfer accept --commit <txn>```
+`./helium-wallet validators transfer accept --commit <txn>`
 
+:::info
+
+Once a validator has had a stake transferred from it, it cannot be staked again. The validator may be deleted, including the `swarm_key`. Wallet commands to stake this validator's public address again will fail.
+
+:::
 
 More general wallet commands [here](https://github.com/helium/helium-wallet-rs).
