--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -159,7 +159,7 @@ Also known as **US902-928**
 | Chad                             |                     |                                                                                                                               |
 | Chile                            | AU915-928           | [FIJA NORMA TECNICA DE EQUIPOS DE ALCANCE REDUCIDO](https://www.leychile.cl/Consulta/m/norma_plana?org=&idNorma=240404)       |
 | China                            | CN470-510 CN779-787 |                                                                                                                               |
-| Colombia                         | US902-928           |                                                                                                                               |
+| Colombia                         | AU915-928           | https://lora-alliance.org/resource_hub/rp2-1-0-3-lorawan-regional-parameters/                                                                                                                              |
 | Comoros                          |                     |                                                                                                                               |
 | Democratic Republic of the Congo | EU863-870 EU433     | CRASA follows CEPT Rec. 70-03                                                                                                 |
 | Republic of the Congo            |                     |                                                                                                                               |
