--- a/docs/mine-hnt/hotspot-makers/hotspot-makers.mdx
+++ b/docs/mine-hnt/hotspot-makers/hotspot-makers.mdx
@@ -21,4 +21,5 @@ the Network.
 - [Security Requirements](/mine-hnt/hotspot-makers/security-requirements)
 - [Hotspot BLE Services](/mine-hnt/hotspot-makers/hotspot-ble-services)
 - [Hotspot WiFi Configuration](/mine-hnt/hotspot-makers/hotspot-wifi-configuration)
+- [Hotspot QR Code Onboarding](/mine-hnt/hotspot-makers/hotspot-qr-onboarding)
 - [Burning HNT to your Maker Wallet](/mine-hnt/hotspot-makers/burn-hnt-to-maker-wallet)
