--- a/docs/mine-hnt/hotspot-makers/hotspot-qr-onboarding/hotspot-qr-onboarding.mdx
+++ b/docs/mine-hnt/hotspot-makers/hotspot-qr-onboarding/hotspot-qr-onboarding.mdx
@@ -17,6 +17,8 @@ For those Makers that choose not to include a Bluetooth Radio in their hardware 
 
 ## Overall Process
 
+### Bluetooth Only
+
 The typical Hotspot Onboarding process using Bluetooth is as follows:
 1. Enter the Hotspot Onboarding flow by selecting a Maker
 2. Instructions to power on and pair with the Bluetooth (Maker-specific)
@@ -24,6 +26,7 @@ The typical Hotspot Onboarding process using Bluetooth is as follows:
 4. Set Location and Antenna
 5. Submit add_gateway and assert_loc_v2 transactions to the Blockchain
 
+### QR Code Onboarding
 A QR Code onboarding process combines both Helium App and an Maker-supplied web dashboard.
 1. Enter the Hotspot Onboarding flow and select a Maker with QR Onboarding
 2. Instructions to scan a QR code from a Maker's web dashboard. Instructions on which files to update will come as soon as app-side support is added. 
@@ -34,6 +37,8 @@ A QR Code onboarding process combines both Helium App and an Maker-supplied web 
 6. Set Location and Antenna
 7. Submit add_gateway and assert_loc_v2 transactions to the Blockchain.
 
+
+## Example Onboarding Flow (app)
 <img
   className="docsheader"
   style={{ marginBottom: 20 }}
