--- a/docs/mine-hnt/hotspot-makers/hotspot-qr-onboarding/hotspot-qr-onboarding.mdx
+++ b/docs/mine-hnt/hotspot-makers/hotspot-qr-onboarding/hotspot-qr-onboarding.mdx
@@ -42,6 +42,12 @@ A QR Code onboarding process combines both Helium App and an Maker-supplied web 
 <img
   className="docsheader"
   style={{ marginBottom: 20 }}
-  src={useBaseUrl("img/mine-hnt/qr-onboarding.png")}
+  src={useBaseUrl("img/mine-hnt/qr-onboarding-1.png")}
+/>
+
+<img
+  className="docsheader"
+  style={{ marginBottom: 20 }}
+  src={useBaseUrl("img/mine-hnt/qr-onboarding-2.png")}
 />
 
