Clarify light vs. DIY
Some suggested updates to clarify DIY in the milestones (1.5 and 2, specifically).

--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -70,15 +70,15 @@ At the completion of Milestone 1, any LoRaWAN gateways running [gateway-rs](http
 
 
 ### Milestone 1.5 
-#### Add Light Hotspot to Blockchain
+#### Add DIY Gateway to Blockchain
 
 * **Target Completion: Mid-April**
 * **Status: IN DEVELOPMENT**
 
 
-When  Milestone 1.5 is done, Light Hotspots that will not participate in Proof of Coverage can be formally added to blockchain by anyone and be seen on the [Helium Coverage Map](https://explorer.helium.com/hotspots). These Light Hotspots will be required to pay $20 transaction fee to join the blockchain, and $10 assert location fee. (Full Hotspots pay $40 and $10 for add assert, respectively.) 
+When  Milestone 1.5 is done, DIY Light Hotspots including that will not participate in Proof of Coverage can be formally added to blockchain by anyone and be seen on the [Helium Coverage Map](https://explorer.helium.com/hotspots). These Hotspots will be required to pay $20 transaction fee to join the blockchain, and $10 assert location fee. (Full Hotspots pay $40 and $10 for add assert, respectively.) 
 
-At this phase, Light Hotspots will be onboarded using the [Helium Wallet CLI](https://github.com/helium/helium-wallet-rs), and **will not earn any HNT**. Note: Once upgraded, these Light Hotspots will only earn HNT for transferring packets. They will not be eligible for Proof of Coverage mining rewards.
+At this phase, DIY Hotspots will be onboarded using the [Helium Wallet CLI](https://github.com/helium/helium-wallet-rs), and **will not earn any HNT**. Note: Once upgraded, these Light Hotspots will only earn HNT for transferring packets. They will not be eligible for Proof of Coverage mining rewards.
 
 ### Milestone 2
 #### Paid Packet Forwarding
@@ -86,7 +86,7 @@ At this phase, Light Hotspots will be onboarded using the [Helium Wallet CLI](ht
 * **Target Completion: May/June**
 * **Status: NOT YET STARTED**
 
-All Light Hotspots will be able to earn HNT for packet forwarding. 
+All DIY Light Hotspots will be able to earn HNT for packet forwarding. 
 
 
 ### Milestone 3
