--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -64,6 +64,11 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 			<a href="/use-the-network/devices/development/rakwireless/wisblock-4631"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
+	    	<a href="/use-the-network/devices/development/seeed-studio/loramodule-e5"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-logo.webp")} /></a>
+			<p></p>
+			<a href="/use-the-network/devices/development/seeed-studio/loramodule-e5"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
+	    </div>
+		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<a href="/use-the-network/devices/development/sparkfun/pro-rf"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/development/sparkfun/sparkfun-logo.png")} /></a>
 	    	<p></p>
 			<a href="/use-the-network/devices/development/sparkfun/pro-rf"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
