--- a/docs/use-the-network/devices/development/seeed-studio/loramodule-e5.mdx
+++ b/docs/use-the-network/devices/development/seeed-studio/loramodule-e5.mdx
@@ -1,22 +1,21 @@
 ---
 id: loramodule-e5
 hide_title: true
-title: LoRa-E5 STM32WLE5JC Module, embedded SX126X and MCU for LoRaWAN Network
+title: LoRa-E5 STM32WLE5JC Module
 description:
   LoRa-E5 LoRaWAN module is designed with ST system-level package chip
   STM32WLE5JC, ARM Cortex M4 ultra-low-power MCU and LoRa SX126X. It supports
   (G)FSK mode and LoRa. 62.5kHz, 125kHz, 250kHz, and 500kHz bandwidth can be
   used in LoRa® mode, making it suitable for the design of various IoT nodes,
   supporting EU868 and US915.
-image: img/use-the-network/devices/ready-to-use/seeed-studio/loramodule-e5.jpg
-sidebar_label:
-  LoRa-E5 STM32WLE5JC Module, embedded SX126X and MCU for LoRaWAN Network
-slug: /use-the-network/devices/ready-to-use/seeed-studio/loramodule-e5
+image: img/use-the-network/devices/development/seeed-studio/loramodule-e5.jpg
+sidebar_label: LoRa-E5 STM32WLE5JC Module
+slug: /use-the-network/devices/development/seeed-studio/loramodule-e5
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## LoRa-E5 STM32WLE5JC Module, embedded SX126X and MCU for LoRaWAN Network
+## LoRa-E5 STM32WLE5JC Module
 
 LoRa-E5 LoRaWAN module is designed with ST system-level package chip
 STM32WLE5JC, ARM Cortex M4 ultra-low-power MCU and LoRa SX126X. It supports
@@ -26,7 +25,7 @@ supporting EU868 and US915.
 
 <img
   src={useBaseUrl(
-    "img/use-the-network/devices/ready-to-use/seeed-studio/loramodule-e5.jpg"
+    "img/use-the-network/devices/development/seeed-studio/loramodule-e5.jpg"
   )}
 />
 
@@ -43,8 +42,3 @@ supporting EU868 and US915.
 - width: 12 mm
 - length: 12 mm
 - height: 2.5 mm
-
----
-
-Content generated from
-[LoRaWAN-devices](https://github.com/TheThingsNetwork/lorawan-devices)
