Add HNT Staking as a Staking provider

--- a/docs/mine-hnt/validators/validator-faqs-resources.mdx
+++ b/docs/mine-hnt/validators/validator-faqs-resources.mdx
@@ -117,3 +117,4 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 * [Managed Helium Validator Service](https://heliumvalidators.com)
 * [StakeMyHNT](https://www.stakemyhnt.com)
 * [Helium Staking](https://www.helium-staking.com)
+* [HNT Staking](https://www.hntstaking.net)
