--- a/docs/use-the-network/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/use-the-network/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -299,7 +299,8 @@ If you are using Ubuntu as user ubuntu, this path would now be
 Now you can try the `run` command to start your container for the first time:
 
 ```text
-docker run -d \
+docker run -d --init \
+--ulimit nofile=64000:64000 \
 --env REGION_OVERRIDE=US915 \
 --restart always \
 --publish 1680:1680/udp \
