--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -1,13 +1,12 @@
 ---
 id: devices
-hide_title: true
 sidebar_label: Devices
 slug: /use-the-network/devices
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-## Helium Devices
+# Helium Devices
 
 The Helium network supports any LoRaWAN capable device meeting the
 [v1.0.2 specification](https://lora-alliance.org/resource_hub/lorawan-specification-v1-0-2).
