--- a/docs/mine-hnt/validators/validator-faqs-resources.mdx
+++ b/docs/mine-hnt/validators/validator-faqs-resources.mdx
@@ -118,3 +118,4 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 * [StakeMyHNT](https://www.stakemyhnt.com)
 * [Helium Staking](https://www.helium-staking.com)
 * [HNT Staking](https://www.hntstaking.net)
+* [Bison Trails](https://www.bisontrails.co)
