--- a/docs/mine-hnt/validators/validator-score.mdx
+++ b/docs/mine-hnt/validators/validator-score.mdx
@@ -14,7 +14,7 @@ Validators are a new entity on the Helium Blockchain that will perform the work 
 
 The consensus group is made up of Validator nodes that are rewarded with $HNT for working together to verify transactions and producing blocks. 
 
-However, if a Validator node prevents the consensus group from performing its task, for example if it provides insuffient computing resources or has a weak network connection (equally strong upstream and downstream is needed), the Validator node will incur penalties that can affect the amount of rewards earned.
+However, if a Validator node prevents the consensus group from performing its task, for example if it provides insufficient computing resources or has a weak network connection (equally strong upstream and downstream is needed), the Validator node will incur penalties that can affect the amount of rewards earned.
 
 :::tip Before you continue
 
