--- a/docs/mine-hnt/validators/validator-faqs-resources.mdx
+++ b/docs/mine-hnt/validators/validator-faqs-resources.mdx
@@ -18,7 +18,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 10,000 HNT. 
 
-**What’s the minimum number of validators needed to go to mainnet?** 
+**What’s the minimum number of validators needed to go to Mainnet?** 
 
 The current proposal is 100 with no maximum number of validators that can participate. We will activate a separate chain variable when we reach the proposed minimum which will enable Consensus Group election from the validator pool. 
 
@@ -28,7 +28,7 @@ No.
 
 **How many validators are elected to the consensus group?**
 
-Initially 16, but expect to quickly grow the number.
+Initially 49, but expect to quickly grow the number.
 
 **When a validator is in the consensus group can I update it?**
 
