--- a/docs/mine-hnt/hotspot-makers/docker-integration/docker-integration.mdx
+++ b/docs/mine-hnt/hotspot-makers/docker-integration/docker-integration.mdx
@@ -149,5 +149,16 @@ typically at: /etc/dbus-1/system.d/com.helium.Miner.conf`
 
 ## Setting the ulimit
 
-Ensure the ulimit is set to a minimum of `64000` for optimal miner performance. This is done with the Docker run argument
-`--ulimit nofile=64000:64000`.
+Ensure the ulimit system is set to a *minimum* of `64000`; anything lower will be insufficient but more is welcome.
+
+You'll want to include the Docker run argument `--ulimit nofile=64000:64000`.
+
+**In addition**, you'll need to verify that your Linux system allows for such file limits. For example,
+
+```bash
+$ ulimit -Sn
+64000
+```
+
+If the host system does not allow for 64,000 file handles, then the `docker run` argument will not be sufficient.
+
