--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -100,8 +100,8 @@ At this point, Light Hotspots from [HIP19-approved manufacturers](/mine-hnt/hots
 
 At this stage, there will be three types of Hotspots:
 
-1. Full Hotspot (HIP-19 approved, earn HNT for PoC, Consensus, Packet Forwarding)
-2. Light Hotspot (HIP-19 approved, earn HNT for PoC, Packet Forwarding)
+1. Full Hotspot (HIP-19 approved, earn HNT for PoC, Packet Forwarding, follows Blockchain)
+2. Light Hotspot (HIP-19 approved, earn HNT for PoC, Packet Forwarding, follows Blockchain)
 3. Non-PoC Light Hotspot (not HIP-19 approved, earn HNT for Packet Forwarding)
 
 ### Milestone 4
@@ -111,5 +111,7 @@ At this stage, there will be three types of Hotspots:
 * **Status: NOT YET STARTED**
 
 In the final milestone, all existing Hotspots on the Network will be converted to run [gateway-rs](https://github.com/helium/gateway-rs) and will be dependent on Validators to generate challenges and process witness receipts.
+
+All Hotspots will not need to follow the Blockchain.
 
 
