--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -100,9 +100,9 @@ At this point, Light Hotspots from [HIP19-approved manufacturers](/mine-hnt/hots
 
 At this stage, there will be three types of Hotspots:
 
-1. Full Hotspot (HIP-19 approved, earn HNT for PoC, Packet Forwarding, follows Blockchain)
-2. Light Hotspot (HIP-19 approved, earn HNT for PoC, Packet Forwarding, follows Blockchain)
-3. Non-PoC Light Hotspot (not HIP-19 approved, earn HNT for Packet Forwarding)
+1. Full Hotspot (HIP-19 approved, earns HNT for PoC and Packet Forwarding, follows Blockchain)
+2. Light Hotspot (HIP-19 approved, earns HNT for PoC and Packet Forwarding)
+3. Non-PoC Light Hotspot (not HIP-19 approved, earns HNT for Packet Forwarding)
 
 ### Milestone 4
 #### All Hotspots Operate as Light Hotspots
