--- a/docs/mine-hnt/light-hotspots/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots/light-hotspots.mdx
@@ -26,7 +26,16 @@ For real-time development and community support of Light Hotspots, please join t
 ## Light Hotspot Setup Guides
 
 - [Dragino LPS80/DLOS8](/mine-hnt/light-hotspots/guides/dragino)
+* Draginos will only mine HNT as a non-PoC Light Hotspot
 - [Kerlink gateways](/mine-hnt/light-hotspots/guides/kerlink)
+* Kerlink gateways will only mine HNT as a non-PoC Light Hotspot unless it is specified as a Helium-Compatible Kerlink Miner.
+
+
+:::info
+
+Gateways running a Packet Forwarder and Miner is not considered a Light Hotspot and will never earn HNT.
+
+:::
 
 ## What is a Light Hotspot?
 
