--- a/docs/use-the-network/build-a-packet-forwarder/build-a-packet-forwarder.mdx
+++ b/docs/use-the-network/build-a-packet-forwarder/build-a-packet-forwarder.mdx
@@ -11,7 +11,11 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 :::warning
 
 The ability to earn from [PoC](https://docs.helium.com/blockchain/proof-of-coverage) with anything other than an [Approved Hotspot](https://helium.com/mine) 
-is not supported. Packet forwarders are designed for sensor developers to test usage without needing a hotspot. If your interested in using the Helium network and earning from data transfer from your existing hardware, please check out the [Light Gateways Roadmap](https://docs.helium.com/mine-hnt/light-hotspots/).
+is not supported. 
+
+Packet forwarders are designed for sensor developers to test usage without needing a Hotspot. If you're interested in using the Helium network and earning from data transfer from your existing hardware, please check out the [Light Hotspots](https://docs.helium.com/mine-hnt/light-hotspots/).
+
+Gateways running Packet Forwarders WILL NOT EARN HNT.
 
 :::
 
