clarification on light hotspots, packet forwarders, draginos, and kerlinks. (#364)
* clarification

* more deets

* formatting

* formatting

* updates per kent

Co-authored-by: Coco Tang <cocotang@MacBook-Pro.attlocal.net>
Co-authored-by: Coco Tang <cocotang@MacBook-Pro.local>

--- a/docs/mine-hnt/light-hotspots/guides/dragino.mdx
+++ b/docs/mine-hnt/light-hotspots/guides/dragino.mdx
@@ -1,7 +1,6 @@
 ---
 id: dragino
 title: Dragino Light Hotspot Setup
-hide_title: true
 sidebar_label: Dragino LPS80/DLOS8
 slug: /mine-hnt/light-hotspots/guides/dragino
 ---
@@ -15,7 +14,7 @@ LoRaWAN gateway such as the LPS8 or DLOS8 to work with the Helium network.
 
 :::warning
 
-The ability to mine HNT with anything other than
+Dragino Hotspots will only mine HNT through packet transfer, and is considered a non-PoC Light Hotspot. The ability to mine HNT with anything other than
 [Approved Hotspots](https://helium.com/mine) is not currently supported. Please
 join the [#gateway](https://discord.gg/helium) in the Helium Discord Server for
 the latest updates.
