--- a/docs/mine-hnt/light-hotspots/guides/kerlink.mdx
+++ b/docs/mine-hnt/light-hotspots/guides/kerlink.mdx
@@ -1,7 +1,6 @@
 ---
 id: kerlink
 title: Kerlink Light Hotspot Setup
-hide_title: true
 sidebar_label: Kerlink iStation, iFemtoCell, iFemtoCell Evolution
 slug: /mine-hnt/light-hotspots/guides/kerlink
 ---
@@ -14,7 +13,7 @@ All Kerlink gateways share the same operating system, called KerOS. It is based 
 
 :::warning
 
-The ability to mine HNT with anything other than
+Kerlink Gateways will only mine HNT through packet transfer, and is considered a non-PoC Light Hotspot unless you purchase a Kerlink Miner specificlly designed for the Helium Network. The ability to mine HNT with anything other than
 [Approved Hotspots](https://helium.com/mine) is not currently supported. Please
 join the [#gateway](https://discord.gg/helium) in the Helium Discord Server for
 the latest updates.
