--- a/docs/wallets/ledger.mdx
+++ b/docs/wallets/ledger.mdx
@@ -112,8 +112,8 @@ what is displayed on the Ledger.
 :::
 
 :::info
-You may use add `--qr` option to the command to display your address in
-the form of QR code.
+You may add the `--qr` option to the command to display your address in
+the form of a QR code.
 :::
 
 To receive HNT, simply provide your address in the base58 format output from the
