--- a/docs/mine-hnt/validators/validator-deployment-guide.mdx
+++ b/docs/mine-hnt/validators/validator-deployment-guide.mdx
@@ -85,7 +85,7 @@ The output will look similar to this:
 +--------------------+-----------------------------------------------------+
 ```
 
-Your new wallet is now ready to recieve HNT.  Note that 
+Your new wallet is now ready to recieve HNT.  
 
 :::info
 
