copyedit: let's -> lets

--- a/docs/use-the-network/console/api.mdx
+++ b/docs/use-the-network/console/api.mdx
@@ -8,7 +8,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Console API
 
-The Console API let's you interact with the console via HTTP Requests. You can
+The Console API lets you interact with the console via HTTP Requests. You can
 either do that directly using the HTTP API or you can leverage the CLI, which
 abstracts the API and provides higher level features like importing devices from
 other network providers.
