add twelve words doc and new sidebar

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -45,3 +45,7 @@ In this section, you can configure your apps PIN settings, set the app Language,
 reveal the 12 security words (your private key) for your wallet, and view your
 current app version. There are also access to some help articles and the
 community Slack channel.
+
+## Troubleshooting 
+
+* [Twelve Words Seed Phrase](/wallets/app-wallet/twelve-words)
