add hotspot troubleshooting doc

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -49,3 +49,4 @@ community Slack channel.
 ## Troubleshooting 
 
 * [Twelve Words Seed Phrase](/wallets/app-wallet/twelve-words)
+* [Hotspot Setup Troubleshooting](/wallets/app-wallet/hotspot-setup-troubleshooting)
