create troubleshooting section, add ntwk

--- a/docs/troubleshooting/hotspot-setup.mdx
+++ b/docs/troubleshooting/hotspot-setup.mdx
@@ -1,7 +1,7 @@
 ---
 id: hotspot-setup-troubleshooting
-title: Hotspot Setup Troubleshooting
-sidebar_label: Hotspot Setup Troubleshooting
+title: Hotspot Setup
+sidebar_label: Hotspot Setup
 slug: /wallets/app-wallet/hotspot-setup-troubleshooting
 ---
 
