add hotspot led doc

--- a/docs/wallets/app-wallet/app-wallet.mdx
+++ b/docs/wallets/app-wallet/app-wallet.mdx
@@ -49,4 +49,5 @@ community Slack channel.
 ## Troubleshooting 
 
 * [Twelve Words Seed Phrase](/wallets/app-wallet/twelve-words)
-* [Hotspot Setup Troubleshooting](/wallets/app-wallet/hotspot-setup-troubleshooting)
+* [Transfer Hotspot](/wallets/app-wallet/transfer-hotspot)
+* [RAK Hotspot Setup](/wallets/app-wallet/rak-hotspot-setup)
