--- a/docs/troubleshooting/hotspot-led.mdx
+++ b/docs/troubleshooting/hotspot-led.mdx
@@ -7,7 +7,7 @@ slug: /troubleshooting/hotspot-led
 
 # Hotspot LED Meaning  
 
-#### Here's a general guide to what the different color lights on your hotspot mean.
+#### Here's a guide on what different colored lights on your Hotspot mean
 On the top of the Hotspot:
 * YELLOW: Connected to power, but not connected to the internet.  
 * GREEN: Online / connected to the internet
@@ -19,4 +19,3 @@ On the top of the Hotspot:
 * Green LED: At power-up Green LED will blink in random ways but after about 5 seconds it should stop. If Green blinking repeatedly for a long time it means there is some problem - usually this will be the SD card but may be a power issue too.
 * In the case of a constant blinking Green it is recommended to:* Unplug USB-C power* Extract microSD card, check it and re-insert it making sure it’s well seated, The card could have moved in shipping it may have inserted it incorrectly (e.g. upside down) after backup.* Reconnect USB-C power making sure it's plugged in all the all way.
 * If the lights on the pi are continue to blink in a specific sequence, you can review the different combinations here to get an idea of what’s going on: https://www.raspberrypi.org/documentation/configuration/led_blink_warnings.md
-
