--- a/docs/troubleshooting/hotspot-led.mdx
+++ b/docs/troubleshooting/hotspot-led.mdx
@@ -11,7 +11,7 @@ slug: /troubleshooting/hotspot-led
 On the top of the Hotspot:
 * YELLOW: Connected to power, but not connected to the internet.  
 * GREEN: Online / connected to the internet
-* BLUE:  Blue-tooth pairing mode to connect to your device
+* BLUE:  Bluetooth pairing mode to connect to your phone
 * WHITE: The Firmware is being automatically updated.  This can take several minutes and will go back to Green once it completes.
 
 #### The lights on the Raspberry Pi (for both RAK Hotspot Miners and inside the original Helium Hotspot):
